# flox

./: .cz.toml  .editorconfig  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .rustfmt.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOAL.md  Justfile  LICENSE  Makefile  Makefile.am  Makefile.in  PLAN.md  PROFILING.md  PROJECTS.md  Procfile  README.md  aclocal.m4  bisect_script.sh  bootstrap.sh  codecov.yml  completion-discoverability-linear-task.md  config.mk.in  configure  configure.ac  default.nix  demo-hook.md  flake.nix  log.txt  log2.txt  log3.txt  merge-profile-traces.py  notes.md  notes_locking.md  pytest.ini  (+13 more)
builtfilter-rs/: Cargo.toml
builtfilter-rs/src/: cache.rs  main.rs
cli/: CLAUDE.html  CLAUDE.md  Cargo.toml  Makefile.am  Makefile.in  build_result.json  clippy.toml  log.txt  test.json  update-instructions.txt
cli/.flox/run/: aarch64-darwin.cli.dev  aarch64-darwin.cli.run
cli/beta/: Cargo.toml
cli/beta/src/: beta_enabled.rs  lib.rs
cli/catalog-api-v1/: .rustfmt.toml  Cargo.toml  README.md  build.rs  openapi.json  reproducer.json
cli/catalog-api-v1/src/: client.rs  error.rs  hooks.rs  lib.rs  mock.rs  pre_request_hook.rs
cli/crates/flox-rust-sdk/: Cargo.toml
cli/doc/release-notes/: rl-0.1.5.md  rl-0.2.1.md  rl-0.2.3.md  rl-0.2.6.md  rl-0.3.1.md  rl-0.3.3.md  rl-0.3.5.md  rl-0.3.6.md
cli/executive-poc/: Cargo.toml
cli/executive-poc/src/: main.rs
cli/factory-api-v1/: Cargo.toml  build.rs  openapi.json
cli/factory-api-v1/src/: client.rs  hooks.rs  lib.rs  status.rs
cli/flox/: Cargo.toml
cli/flox-activations/: Cargo.toml
cli/flox-activations-zig/: .gitignore  build.zig  build.zig.zon
cli/flox-activations-zig/.claude/: settings.local.json
cli/flox-activations-zig/src/: activations.zig  cli.zig  json.zig  main.zig  memory_tests.zig  shell_gen.zig  tests.zig
cli/flox-activations/src/: activate_script_builder.rs  activation_diff.rs  activations.rs  attach.rs  attach_diff.rs  cli.rs  container_active_env.rs  container_project_ctx.rs  deactivate.rs  diff_serializer.rs  env_diff.rs  executive.rs  hook.rs  lib.rs  logger.rs  logging.rs  main.rs  message.rs  process_compose.rs  proctitle.rs  shell_gen.rs  start.rs  start_diff.rs  vars_from_env.rs
cli/flox-catalog/: Cargo.toml
cli/flox-catalog/src/: client.rs  config.rs  error.rs  lib.rs  mock.rs  token.rs  types.rs
cli/flox-config/: Cargo.toml
cli/flox-config/src/: config.rs  lib.rs  load.rs  write.rs
cli/flox-core/: Cargo.toml
cli/flox-core/src/: activate_data.rs  activations.rs  canonical_path.rs  features.rs  floxhub.rs  hook_actions.rs  hook_state.rs  lib.rs  preference.rs  proc_status.rs  shell.rs  (+7 more)
cli/flox-events/: Cargo.toml
cli/flox-lockfile/: Cargo.toml
cli/flox-manifest/: Cargo.toml
cli/flox-package-builder/: Cargo.toml
cli/flox-rust-sdk/: Cargo.toml
cli/flox-test-utils/: Cargo.toml
cli/flox-watchdog/: Cargo.toml
cli/floxhub-auth/: Cargo.toml
cli/floxhub-client/: Cargo.toml
cli/klaus/: Cargo.toml
cli/mk_data/: Cargo.toml  README.md  run.sh
cli/nef-catalog-refs/: Cargo.toml
cli/nef-lock-catalog/: Cargo.toml
cli/nix-builder/: Cargo.toml
cli/rexpect/: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bors.toml
cli/schemas/: generations-metadata-v2.schema.json  lockfile-v1.schema.json  manifest-v1.schema.json
cli/shared/: Cargo.toml
cli/shell_gen/: Cargo.toml
cli/systemd/: Cargo.toml
cli/tests/: README.md  activate-mode.bats  activate.bats  add-comment  add-invalid-edit  allow.bats  auth-pat.bats  auth.bats  auto-activation.bats  build-wrapper.bats  buildenv.bats  catalog-live.bats  compose.bats  containerize.bats  cuda.bats  deactivate-state.bats  deactivate.bats  deactivate_profile_e2e.bats  default.nix  delete.bats  develop.bats  edit.bats  environment-activate.bats  environment-build.bats  environment-containerize.bats  environment-delete.bats  environment-edit.bats  environment-init.bats  environment-install.bats  environment-list.bats  environment-managed.bats  environment-pull.bats  environment-push.bats  environment-remote.bats  extension.bats  flox-init.bats  flox-nixpkgs.bats  flox-pushpull.bats  floxhub-cross-systems.bats  generations.bats  (+41 more)
cli/xtask/: Cargo.toml
crates/flox-cli/: Cargo.toml
nix-plugins/: .clang-format  .clang-tidy  .clangd  .gitignore  meson.build
nix-plugins/src/: lock-flake-installable.cc
nix-plugins/tests/: flox-nixpkgs  flox-nixpkgs.cc  lock-flake-installable  lock-flake-installable.cc  meson.build  test.hh
pkgdb/: .envrc  .gitignore  .valgrindrc  CONTRIBUTING.md  Doxyfile  Include.mk  Makefile  Makefile.am  Makefile.bak  Makefile.in  README.md  aclocal.m4  bootstrap.sh  config.mk.in  configure.ac  pkg-fun.nix  rules.json
pkgdb/build-aux/: autoreconf  changed-sources.sh  clang-tidy-to-json  clang-tidy-to-json.sh  fixup-headers.sh  iwyu  iwyu-mappings.json  iwyu-to-json  valgrind.supp
pkgdb/docs/: .gitignore  database-locking.md  garbage-collection.md  lockfile.md  manifests.md  params-to-sql.md  registry.md  search.md  testing-private-interfaces.cc  valgrind.md  visit.cc
pkgdb/include/: Makefile.am  Makefile.in  versions.hh
pkgdb/libexec/: set-prompt-bash.sh
pkgdb/src/: command.cc  eval.cc  exceptions.cc  expr.cc  flake-package.cc  flox-flake.cc  ld-floxlib.c  lock-flake-installable.cc  logger.cc  main.cc  metrics.cc  nix-state.cc  package.cc  raw-package.cc  registry.cc  repl.cc  tomlToJSON.cc  util.cc  versions.cc  yamlToJSON.cc
pkgdb/tests/: .gitignore  Makefile.am  Makefile.in  buildenv-lockfile.cc  buildenv.bats  check.bats  cli.bats  db_locking.cc  descriptor.bats  environment.cc  exceptions.cc  fetcher.cc  flox-nixpkgs.bats  flox-nixpkgs.cc  ga-registry.bats  gc.bats  gc.cc  get.bats  groups.bats  is_sqlite3.cc  linkenv.bats  lock-flake-installable.cc  lockfile.bats  lockfile.cc  manifest.cc  migrate.bats  pathological.bats  pkgdb.cc  realise.bats  realise.cc  realisepkgs-lockfile.cc  realisepkgs.bats  registry.cc  scrape-rules.bats  scrape.bats  search-params.cc  search.bats  search_expensive.bats  setup_suite.bash  sqlite3.bats  (+3 more)
(+2106 files in other folders)
