[package]
name = "flox-rust-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.1", features = ["derive", "yaml-rust", "yaml"] }
anyhow = "1.0.65"
tokio = { version = "1", features = ["full"] }
rnix = "0.10.2"
serde = "1.0"
serde_json = "1.0"
octocrab = "0.17.0"
dotenv = "0.15.0"
async-trait = "0.1.52"
getset = "0.1.2"
log = "0.4.17"
pretty_env_logger = "0.4.0"