[workspace]
members = [
    "cli/catalog-api-v1",
    "cli/flox",
    "cli/flox-rust-sdk",
    "cli/flox-activations",
    "cli/flox-core",
    "cli/flox-test-utils",
    "cli/mk_data",
    "cli/shell_gen",
    "cli/systemd",
    "cli/xtask",
    "cli/nef-lock-catalog",
]
default-members = ["cli/flox", "cli/flox-activations"]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3.6"
blake3 = "1.8.2"
bpaf = { version = "0.9.22", features = ["derive", "autocomplete"] }
catalog-api-v1 = { path = "cli/catalog-api-v1" }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
close_fds = "0.3"
config = { version = "0.15", default-features = false, features = ["toml"] }
crossterm = "0.29"
derive_more = { version = "2.1.1", features= ["as_ref", "deref", "deref_mut", "display", "from", "from_str"]}
dirs = "6.0.0"
enum_dispatch = "0.3.13"
flox-activations = { path = "cli/flox-activations" }
flox-core = { path = "cli/flox-core" }
flox-rust-sdk = { path = "cli/flox-rust-sdk" }
flox-test-utils = { path = "cli/flox-test-utils" }
fslock = "0.2.1"
fs_extra = "1.3.0"
futures = "0.3"
http = "1.4.0"
# git pending:
# - https://github.com/alexliesenfeld/httpmock/issues/127
# - https://github.com/alexliesenfeld/httpmock/pull/131
httpmock = { git = "https://github.com/flox/httpmock.git", default-features = false, features = [
    "proxy",
    "record",
] }
indent = "0.1.1"
indexmap = { version = "2.13.0", features = ["serde"] }
indoc = "2.0.7"
inquire = "0.9.2"
indicatif = "0.18"
is_executable = "1.0.5"
itertools = "0.14.0"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
log = { version = "0.4.29", features = ["kv"] }
nef-lock-catalog = { path = "cli/nef-lock-catalog" }
nix = { version = "0.31", features = ["signal", "process", "user", "fs"] }
oauth2 = "5.0"
path-dedot = "3.1.1"
pollster = "0.4.0"
progenitor-client = "0.11.2"
proptest = "1.9.0"
proptest-derive = "0.7.0"
regex = "1.12"
regress = "0.10.5"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
rsevents-extra = "0.2.2"
schemars = "1"
semver = "1.0.27"
sentry = { version = "0.38.1", features = [
    "test",
    "anyhow",
    "tracing",
    "debug-logs",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = "3.16.1"
serde_yaml = "0.9"
shell-escape = "0.1.5"
slug = "0.1"
supports-color = "3.0.2"
# provides process tools for shell detection
sysinfo = "0.38.0"
# provide system version information for metric
# TODO: review if we need this
sys-info = "0.9"
systemd = { path = "cli/systemd" }
tar = "0.4"
tempfile = "3.24.0"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "local-offset"] }
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
toml_edit = { version = "0.23", features = ["serde"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-indicatif = "0.3"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
url-escape = "0.1.1"
uuid = { version = "1.16", features = ["serde", "v4"] }
walkdir = "2"
xdg = "3.0"


# dev dependencies
pretty_assertions = "1.4"
serial_test = "3.3.1"
temp-env = "0.3.2"
expect-test = "1"

# GSSAPI/Kerberos authentication
libgssapi = "0.9"
base64 = "0.22"

# executive/monitoring dependencies

# watchdog dependencies
kqueue = "1.1.1"
signal-hook = "0.4.3"

# build(.rs) dependencies
openapiv3 = "2.2"
prettyplease = "0.2"
progenitor = "0.11.2"
syn = "2.0"

[profile.small]
inherits = "release"
opt-level = "z"
strip = true
lto = true
codegen-units = 1
